Make projects smaller for screens under 300 to ensure screen doesn't overflow when translate animation trigure, causing horizontal scroll bar.

--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,6 @@ body {
     aspect-ratio: 1;
     background-color: var(--second-bg);
     box-shadow: 0px 0px 2px 0px var(--color3);
-    /* position:absolute; */
 }
 
 .bg1,
@@ -185,11 +184,15 @@ body {
     z-index: 1;
     transform: translate(4%, -96%);
 }
+
 .project_container:hover .bg1 {
     transform: translate(4%, -96%);
-}.project_container:hover .bg2 {
+}
+
+.project_container:hover .bg2 {
     transform: translate(8%, -92%);
 }
+
 .project_container:hover .bg3 {
     transform: translate(12%, -88%);
 }
@@ -267,5 +270,12 @@ body {
 
     #bio p {
         font-size: 11px;
+    }
+}
+
+/* Make projects smaller to ensure the project transform animation doesn't push off screen and induce horizontal scroll bar for tiny screens (Galaxy Fold) */
+@media screen and (max-width:300px) {
+    .project_bg {
+        min-width: 200px;
     }
 }
